# fastapi_clean_bookstore

./: .env.test  .gitignore  app.py  database.db  pyproject.toml
.github/workflows/: pipeline.yaml
src/application/controllers/: controller_interface.py  users_controller.py
src/application/use_cases/: UseCaseInterface.py  user_insert_use_cases.py
src/application/use_cases/users/: delete_user_use_case.py  get_all_users_use_case.py  insert_user_use_case.py  users_use_cases.py
src/application/use_cases/users/tests/: test_users_use_cases.py
src/domain/Entities/: user_entity.py
src/domain/Entities/tests/: test_user_entity.py
src/domain/entities/: user_entity.py
src/domain/entities/tests/: conftest.py  test_user_entity.py
src/domain/models/: user_model.py
src/domain/repositories/: repository_interface.py  user_repository.py
src/domain/schemas/: schemas.py
src/errors/: error_handler.py
src/errors/types/: http_not_found.py  http_unprocessable_entity.py
src/infra/db/: database.py  settings.py
src/infra/db/in_memory/: in_memory_settings.py
src/infra/db/in_memory/tests/: conftest.py  test_in_memory_db.py
src/infra/http/users/: user_routes.py
src/infra/repositories/: repository_interface.py  user_repository.py
src/validators/: user_insert_validator.py
tests/: conftest.py  test_app.py
tests/application/controllers/: test_users_controller.py
tests/application/use_cases/: test_users_use_case.py
tests/domain/entities/: test_user_entity.py
tests/domain/models/: test_user_model.py
tests/domain/repositories/: test_user_repository.py
tests/infra/db/: test_database.py
tests/infra/http/: test_user_routes.py
tests/infra/repositories/: in_memory_user_repository.py  test_user_repository.py
(+1 files in other folders)
