[tool.poetry]
name = "fastapi-clean-bookstore"
version = "0.1.0"
description = ""
authors = ["locemar <marcelon27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
